Added OLS chapter

--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -8,7 +8,7 @@ rmd_files: [
     "preface.Rmd",
     #"acknowledgments.Rmd",
     "04-simple-regression-description.Rmd",
-    #"05-exploration.Rmd",
+    "05-ols-estimation.Rmd",
     #"06-exploration-multivariate.Rmd",
     #"07-randomization-tests.Rmd",
     "99-references.Rmd"
