--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -15,6 +15,7 @@ rmd_files: [
     "09-intro-to-multiple-regression.Rmd",
     "10-understanding-statistical-control.Rmd",
     "11-assumptions.Rmd",
+    "12-dummy-coding.Rmd",
     "99-references.Rmd"
     ]
 clean: [packages.bib, bookdown.bbl]
