--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -16,6 +16,7 @@ rmd_files: [
     "10-understanding-statistical-control.Rmd",
     "11-assumptions.Rmd",
     "12-dummy-coding.Rmd",
+    "13-polychotomous.Rmd",
     "99-references.Rmd"
     ]
 clean: [packages.bib, bookdown.bbl]
