--- a/_quarto.yml
+++ b/_quarto.yml
@@ -60,13 +60,13 @@ book:
         - codebooks/fertility.qmd
         - codebooks/gapminder.qmd
         - codebooks/keith-gpa.qmd
-        # - codebooks/mn-schools.qmd
-        # - codebooks/pew.qmd
-        # - codebooks/riverview.qmd
-        # - codebooks/scoobydoo.qmd
-        # - codebooks/spice-girls.qmd
-        # - codebooks/state-education.qmd
-        # - codebooks/work-demands.qmd
+        - codebooks/mn-schools.qmd
+        - codebooks/pew.qmd
+        - codebooks/riverview.qmd
+        - codebooks/scoobydoo.qmd
+        - codebooks/spice-girls.qmd
+        - codebooks/state-education.qmd
+        - codebooks/work-demands.qmd
 
 bibliography: ["assets/modeling.bib", "assets/packages.bib"]
 csl: 'assets/apa-single-spaced.csl'
